--- a/starter-code/scss/components/_hero_avatars.scss
+++ b/starter-code/scss/components/_hero_avatars.scss
@@ -2,26 +2,26 @@
     display: grid;
     grid-template-columns: repeat(3,1fr); //2, 1fr
     //grid-template-rows: repeat(2,1fr);
+    overflow: hidden;
 
-
-    [class^='faces'] {
-        height:100%;
+    .faces-1, .faces-2, .headline{
+        padding: 3.25rem 0;
+    }
+    
+    .faces-1, .faces-2 {
         grid-row: 1;
-        
-        //not sure about this
         display: flex;
         justify-content: space-around;
-        //not sure about this
 
-        //faces-1
-        &[class$='-1']{
-            grid-column: 1;
-        }
-        
-        //faces-2
-        &[class$='-2']{
-            grid-column: 3; //2
-        }
+        // border: 1px solid red;
+    }
+
+    .faces-1{
+        grid-column: 1;
+    }
+    
+    .faces-2{
+        grid-column: 3; //2
     }
 
     .headline {
