--- a/starter-code/scss/pages/_index.scss
+++ b/starter-code/scss/pages/_index.scss
@@ -1,3 +1,3 @@
 .logo-container {
-    padding: 5rem;
+    padding: 5rem 0 0;
 }
